2000-10-19  Akim Demaille  <akim@epita.fr>

	* subdir4.test (depcomp): Don't create it, defs does.

2000-10-17  Pavel Roskin  <proski@gnu.org>

	* automake.in (handle_aclocal_m4): exclude aclocal.m4 and
	acinclude.m4 from the dependencies of aclocal.m4 to avoid
	circular and duplicated dependencies. Strip "./" from the
	dependencies.

2000-10-17  Lars J. Aas  <larsa@sim.no>

	* aclocal.in (write_aclocal): Set up aclocal.m4 header with
	normal comments (#) instead of m4 dnl-type comments.

2000-10-17  Alex Hornby <alex@anvil.com>

	* depcomp: Altered sed clause to strip of inclusion depth
	numbers generated by cpp. Also output in gcc style.

2000-10-16  Morten Eriksen  <mortene@sim.no>

	* depcomp (msvisualcpp): New dependency tracking mode, for
	Microsoft Visual C++.

2000-10-16  Morten Eriksen  <mortene@sim.no>

	* depcomp: Fix a bug in SGI dependency tracking mode with source
	files which do not dependend on any other source files.

2000-10-16  Rodney Brown  <RodneyBrown@mynd.com>

	* aclocal.in, aclocal.m4: Standardize FSF Copyright statements.
	* automake.in, automake.texi: Likewise.
	* clean-kr.am, clean.am: Likewise.
	* comp-vars.am: Likewise.
	* compile, compile.am: Likewise.
	* data-clean.am: Likewise.
	* data.am: Likewise.
	* dejagnu.am: Likewise.
	* depcomp: Likewise.
	* depend.am, depend2.am: Likewise.
	* dist-vars.am, dist.am: Likewise.
	* elisp-comp: Likewise.
	* footer.am: Likewise.
	* header-vars.am, header.am: Likewise.
	* java-clean.am java.am: Likewise.
	* kr-extra.am: Likewise.
	* library.am: Likewise.
	* libs-clean.am, libs.am: Likewise.
	* libtool.am: Likewise.
	* lisp-clean.am lisp.am: Likewise.
	* ltlib-clean.am ltlib.am: Likewise.
	* ltlibrary.am: Likewise.
	* m4/Makefile.in: Likewise.
	* m4/strtod.m4: Likewise.
	* mans-vars.am, mans.am: Likewise.
	* mdate-sh: Likewise.
	* missing: Likewise.
	* multilib.am: Likewise.
	* program.am: Likewise.
	* progs-clean.am, progs.am: Likewise.
	* python-clean.am, python.am: Likewise.