@@ -3807,6 +3807,11 @@ sub handle_merge_targets
 	}
     }
 
+    if (&variable_defined('lib_LTLIBRARIES') && 
+	&variable_defined('bin_PROGRAMS'))
+    {
+	$output_rules .= "install-binPROGRAMS: install-libLTLIBRARIES\n\n";
+    }
     # Print definitions users can use.
     &do_one_merge_target ('install-exec', @install_exec);
     $output_rules .= "\n";
