@@ -1,3 +1,8 @@
+2000-10-19  Alex Hornby  <alex@anvil.co.uk>
+
+	* automake.in (handle_merge_targets): Allow parallel install
+	with forced relink.
+
 2000-10-19  Akim Demaille  <akim@epita.fr>
 
 	* subdir4.test (depcomp): Don't create it, defs does.
